--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-	"name": "frontend-gitbook",
-	"version": "1.0.0",
-	"private": true,
-	"description": "前端知识小书",
-	"scripts": {
-		"start": "gitbook serve",
-		"build": "gitbook build"
-	},
-	"author": "https://github.com/yujiaming890321",
-	"license": "MIT",
-	"dependencies": {
-	},
-	"devDependencies": {
-		"husky": "^4.2.3",
-		"lint-staged": "^10.5.4"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"*.{js,css,md,ts,tsx}": [
-			"prettier --write",
-			"git add"
-		]
-	}
+  "name": "frontend-gitbook",
+  "version": "1.0.0",
+  "private": true,
+  "description": "前端知识小书",
+  "scripts": {
+    "start": "gitbook serve",
+    "start:debug": "gitbook serve --log=debug",
+    "build": "gitbook build"
+  },
+  "author": "https://github.com/yujiaming890321",
+  "license": "MIT",
+  "dependencies": {
+    "gitbook-plugin-summary": "^1.1.0"
+  },
+  "devDependencies": {
+    "husky": "^4.2.3",
+    "lint-staged": "^10.5.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,md,ts,tsx}": [
+      "prettier --write",
+      "git add"
+    ]
+  }
 }
