--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,8 @@
 	"arrowParens": "always",
 	"printWidth": 80,
 	"semi": false,
+	"useTabs": false,
+	"tabWidth": 4,
 	"bracketSpacing": true,
 	"jsxBracketSameLine": false
 }
